Assert in MetaspaceGC is always true

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P5
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • gc
    • b03

      An assert in MetaspaceGC::compute_new_size is always true:

      size_t max_shrink_bytes = capacity_until_GC - minimum_desired_capacity;
      assert(max_shrink_bytes >= 0, err_msg("max_shrink_bytes " SIZE_FORMAT,
        max_shrink_bytes));

      since size_t always is larger than or equal to zero.

      The assert should be rewritten to instead compare minimum_desired_capacity and capacity_until_GC.

            Assignee:
            Unassigned
            Reporter:
            Erik Helin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: