8031779: Assert in MetaspaceGC is always true

Reviewed-by: jmasa, jwilhelm